# sgiandubh

./: .gitignore  README.md  WORKFLOW.md  build.sh
bert_ffi/: Cargo.toml  bert_ffi.h
bert_ffi/src/: lib.rs
corpora/: SOURCES.md  logic_kb.txt  logic_questions.txt
examples/: manifest.example.json
package/: index.json
package/ch1_q19/: contrib.facts
package/ch1_q8/: contrib.facts
src/: component_transform.h  engine.dl  gram.h  md_render.h  neural_expert.h  repl_tui.h  rosetta_package.h  server.cpp
test/: run.sh  test_rosetta_package.cpp  test_split_words.cpp
tok_ffi/: Cargo.toml  tok_ffi.h
tok_ffi/src/: lib.rs
tools/: build_expert.sh  build_experts.sh  build_gram.py  build_grounding.py  dl2package.py  normrules2package.py  riscv_questions.py
