[package]
name = "tok_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "tok_ffi"
crate-type = ["staticlib", "rlib"]   # staticlib = linked into sgiandubh; rlib lets `cargo test` build the harness

[dependencies]
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

[profile.release]
opt-level = 2
